--- a/metadata.yaml
+++ b/metadata.yaml
@@ -46,5 +46,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Telepathy -- Fiction'
 - !lcsh 'Science fiction'
+- GITenberg
 title: Suite Mentale
 url: http://www.gutenberg.org/ebooks/22763
